--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
         <div class="js-clock.">
             <h1 class="js-time">00:00</h1>
         </div>
-        <script src="index.js"></script>
+        <form class="js-form form">
+            <input class="js-input" type="text" placeholder="What is Your name?">
+        </form>
+        <h4 class="js-greetings greetings"></h4>
+
+        <form></form>
+        <script src="gretting.js"></script>
         <script src="clock.js"></script>
+        <script sre="todo.js"></script>
     </body>
 
 </html>
