--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
         </form>
         <h4 class="js-greetings greetings"></h4>
 
-        <form></form>
+        <form class="js-toDoForm">
+            <input type="text" placeholder="Write a to do"/>
+        </form>
+        <ul class="js-toDoList">
+            
+        </ul>
         <script src="gretting.js"></script>
         <script src="clock.js"></script>
-        <script sre="todo.js"></script>
+        <script src="todo.js"></script>
+        
     </body>
 
 </html>
