--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
         <ul class="js-toDoList">
             
         </ul>
+
+        <span class="js-weather" >
+
+        </span>
         <script src="gretting.js"></script>
         <script src="clock.js"></script>
         <script src="todo.js"></script>
-        
+        <script src="bg.js"></script>
+        <script src="weather.js"></script>
     </body>
 
 </html>
